# wandering

./: .gitignore  Procfile  README.md  bower.json  h  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
fixtures/: slider.json  sliderimage.json
frontend/: package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: CalendarWidget.vue
members/: urls.py  views.py
members/templates/registration/: layout.html  login.html  navbar.html
static/fullcalendar/: main.css
static/wanderingapp/sass/: main.css  main.css.map
staticfiles/wanderingapp/css/: main.css  main.css.map
staticfiles/wanderingapp/sass/: main.css  main.css.map
templates/: vue_index.html
user/: forms.py  urls.py  views.py
user/templates/user/: add.html  register.html
wanderingapp/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
wanderingapp/migrations/: 0001_initial.py  0002_auto_20220203_1134.py  0002_auto_20220208_2318.py  0002_sliderimage_rename_post_slider_delete_postimage_and_more.py  0003_alter_sliderimage_options_sliderimage_image_order.py  0003_auto_20220209_0254.py  0004_alter_slider_options_slider_image_order.py  0005_alter_slider_image_order_and_more.py  0006_slider_title.py  0007_remove_slider_title.py  0008_alter_sliderimage_images.py
wanderingapp/static/wanderingapp/css/: bootstrap.css  fontawesome-all.min.css  main.css  (+2 more)
wanderingapp/templates/wanderingapp/: add_photo.html  coming_soon.html  index.html  layout.html
wanderingproject/: asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
(+49 files in other folders)
