[tool.poetry]
name = "wandering"
version = "0.1.0"
description = "Website built for Wandering Waters Reserve and Event Venue in Washington State, USA."
authors = ["Jordan Miracle <jordanmiracle@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
Pillow = "^9.0.1"
psycopg2-binary = "^2.9.3"
django-sass-compiler = "^1.1.0"
django-crispy-forms = "^1.14.0"
django-on-heroku = "^1.1.2"
django-admin-thumbnails = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
